--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,17 +1,7 @@
 platform :ios, '9.0'
 
-target 'react-native-starter' do
-
-  pod 'Firebase/Core', '~> 5.3.0'
-
-  pod 'CodePush', :path => '../node_modules/react-native-code-push'
-  pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios/RNFirebase.podspec'
-  pod 'ReactNativeNavigation', :path => '../node_modules/react-native-navigation'
-  pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
-
-  pod 'react-native-config', :path => '../node_modules/react-native-config'
-  pod 'react-native-version-number', :path => '../node_modules/react-native-version-number'
-
+def shared_pods
+  # REACT NATIVE
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
@@ -28,4 +18,24 @@ target 'react-native-starter' do
     'RCTPushNotification',
     'DevSupport',
   ]
+
+  # THIRD PARTY
+  pod 'ReactNativeNavigation', :path => '../node_modules/react-native-navigation'
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
+  pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
+  
+  # REACT NATIVE FIREBASE
+  pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios/RNFirebase.podspec'
+  
+  # FIREBASE MODULES
+  pod 'Firebase/Core', '~> 5.3.0'
+end
+
+# APP ONLY
+target 'react-native-starter' do
+  shared_pods
+
+  # THIRD PARTY
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+  pod 'react-native-version-number', :path => '../node_modules/react-native-version-number'
 end
