--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-firebase": "4.3.8",
     "react-native-navigation": "2.0.2571",
     "react-native-sentry": "0.39.0",
+    "react-native-share-extension": "^1.2.1",
     "react-native-version-number": "0.3.4"
   },
   "devDependencies": {
