--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -21,4 +21,7 @@ project(':react-native-navigation').projectDir = new File(rootProject.projectDir
 include ':detox'
 project(':detox').projectDir = new File(rootProject.projectDir, '../node_modules/detox/android/detox')
 
+include ':react-native-share-extension'
+project(':react-native-share-extension').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-share-extension/android')
+
 include ':app'
