--- a/ios/react-native-starter.xcodeproj/xcshareddata/xcschemes/ShareExtension.xcscheme
+++ b/ios/react-native-starter.xcodeproj/xcshareddata/xcschemes/ShareExtension.xcscheme
@@ -43,13 +43,33 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "611379CF21A98F0100D9E6C6"
+               BuildableName = "ShareExtension-tests.xctest"
+               BlueprintName = "ShareExtension-tests"
+               ReferencedContainer = "container:react-native-starter.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "611379E221A9A12300D9E6C6"
+               BuildableName = "ShareExtensionTests.xctest"
+               BlueprintName = "ShareExtensionTests"
+               ReferencedContainer = "container:react-native-starter.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "61A9DF1521A8BDB400C742A3"
-            BuildableName = "ShareExtension.appex"
-            BlueprintName = "ShareExtension"
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "react-native-starter.app"
+            BlueprintName = "react-native-starter"
             ReferencedContainer = "container:react-native-starter.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
