starting to fix detox

--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "private": true,
   "scripts": {
     "build:env": "sh ./scripts/build-env.sh",
-    "build:e2e:ios.app": "detox build --configuration ios.app.sim.release",
-    "build:e2e:ios.extension": "detox build --configuration ios.extension.sim.release",
+    "build:e2e:ios:app": "detox build --configuration ios.app.sim.release",
+    "build:e2e:ios:extension": "detox build --configuration ios.extension.sim.release",
     "build:e2e:android": "detox build --configuration android.emu.release",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "rename": "sh ./scripts/rename.sh",
     "podspec": "sh ./scripts/podspec.sh",
-    "test": "jest",
-    "test:e2e": "yarn build:e2e:ios && yarn test:e2e:ios",
-    "test:e2e:ios.app": "detox test --configuration ios.app.sim.release",
-    "test:e2e:ios.extension": "detox test --configuration ios.extension.sim.release",
+    "test:jest": "jest",
+    "test:ios:extension": "cd ./ios/ && xcodebuild test -workspace react-native-starter.xcworkspace -configuration Debug -scheme react-native-starter -destination \"platform=iOS Simulator,id=7A942932-F4A1-4EEE-B520-5DA56926FB18\" && cd .. && open ./tmp/iOSShareExtensionTest.png",
+    "e2e:ios:app": "yarn build:e2e:ios:app && yarn test:e2e:ios:app",
+    "e2e:ios:extension": "yarn build:e2e:ios:extension && yarn test:e2e:ios:extension",
+    "e2e:android": "yarn build:e2e:android && yarn test:e2e:android",
+    "test:e2e:ios:app": "detox test --configuration ios.app.sim.release",
+    "test:e2e:ios:extension": "detox test --configuration ios.extension.sim.release",
     "test:e2e:android": "detox test --configuration android.emu.release",
     "lint": "yarn tslint",
     "tslint": "tslint 'src/**/*.ts?(x)'",
     "precommit": "lint-staged",
-    "prepush": "npm run test",
+    "prepush": "yarn test:jest && test:ios:extension",
     "prepare": "patch-package && if [ -f ./scripts/postinstall.sh ]; then sh ./scripts/postinstall.sh; fi",
     "info": "react-native info"
   },
